[tool.poetry]
name = "ray-summit-demo-2021-public"
version = "0.1.0"
description = ""
authors = [
    # Original authors
    "Edward Oakes <ed.nmi.oakes@gmail.com>",
    "Zhe Zhang <zhe.zhang.research@gmail.com>",
    # Just the Poetry/Make stuff, NOT any source code!
    "Teo Zosa <erinzosa@ucla.edu>"
]

[tool.poetry.dependencies]
python = "^3.9"

# Project-specific
aiofiles = "^0.7.0"
dask = "^2021.11.1"
fastapi = "^0.70.0"
pandas = "^1.2.4"
texthero = "^1.1.0"
typer = "^0.4.0"
xgboost-ray = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
